# Embeddings-Aint-Safe

./: .gitignore  README.md  alingment.py  beam_search.py  embedder.py  generator.py  main.py  pyproject.toml  requirements.txt
