[project]
name = "zero2text"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.11.0",
    "transformers",
    "sentence-transformers",
    "numpy",
]

# uv: PyPI lists `torch`, so the resolver would stick to PyPI (+cu130 on Linux) unless we
# explicitly source CUDA builds from the PyTorch wheel repo. See:
# https://docs.astral.sh/uv/guides/integration/pytorch/
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
